syntax = "proto3";

package cart_manage;

message CartAddItemRequest {
  string name = 1;
  float price = 2;
}

message CartItem {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

service CartManageService {
  rpc AddItem (CartAddItemRequest) returns (CartItem) {}
}